Adds grid for index.html

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
 
 /* Global */
 
-body {
+.page-body {
   min-width: 1440px;
   margin: 0;
   padding: 0;
@@ -41,6 +41,11 @@ body {
   font-weight: 400;
   color: var(--basic-gray);
   background-color: var(--basic-white);
+
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: flex-start;
 }
 
 a {
@@ -52,17 +57,61 @@ img {
   height: auto;
 }
 
+
+/* Grid */
+
+.page {
+  height: 100%;
+}
+
+/* Main header */
+
+.main-header {
+  margin-bottom: 80px;
+  background-color: var(--basic-gray-extra-light);
+  outline: 5px solid rgba(0, 255, 0, 0.7);
+  outline-offset: -5px;
+}
+
 /* Main navigation */
 
 .main-navigation {
+  display: grid;
+  grid-template-columns: 180px 1fr min-content;
   line-height: 30px;
   color: var(--basic-black);
-  background-color: var(--basic-gray-extra-light);
   text-transform: uppercase;
+  outline: 5px solid rgba(231, 182, 103, 0.517);
+  outline-offset: -5px;
+  margin-bottom: 0;
 }
 
+/* Container */
+
+.container {
+  width: 1160px;
+  margin: 0 auto;
+  outline: 5px solid rgba(255, 0, 255, 0.3);
+  outline-offset: -5px;
+}
+
+/* Logo */
+
+.main-header-logo {
+  justify-self: start;
+  outline: 5px solid rgba(255, 0, 0, 0.3);
+  outline-offset: -5px;
+}
+
+/* Site navigation */
+
 .site-navigation {
+  margin: 0;
+  padding: 0;
+  justify-self: center;
   list-style: none;
+  outline: 5px solid rgba(0, 255, 255, 0.3);
+  outline-offset: -5px;
 }
 
 .site-navigation-current a:not([href]) {
@@ -70,6 +119,12 @@ img {
 }
 
 /* User navigation */
+
+.user-navigation {
+  justify-self: end;
+  outline: 5px solid rgba(255, 0, 255, 0.3);
+  outline-offset: -5px;
+}
 
 .site-navigation a,
 .user-navigation a {
@@ -96,15 +151,18 @@ img {
 }
 
 .features-list {
+  margin: 0;
+  padding: 0;
   list-style: none;
   background-color: #EEEEEE;
 }
 
 .features-item {
-  text-align: left;
-  /* background-color: #EEEEEE;
-  background-image: url("img/index-slide-1.png");
-  background-position: 100% 50%;
+  min-height: 431px;
+  background-image: url("../img/index-slide-1.png");
+  background-position: 100% 0%;
+  background-repeat: no-repeat;
+  /* background-position: 100% 50%;
   background-repeat: no-repeat; */
 }
 
@@ -119,14 +177,33 @@ img {
 
 .products {
   border-bottom: 2px solid var(--basic-gray-extra-light);
+  outline: 5px solid rgba(255, 0, 0 , 0.3);
+  margin-bottom: 40px;
 }
 
 .products-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 100px;
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
 .products-item {
-  text-align: left;
+  display: grid;
+  justify-content: left;
+  outline: 5px solid rgba(0, 255, 255 , 0.3);
+  outline-offset: -5px;
+}
+
+.products-image {
+  margin-bottom: 25px;
+  order: -1;
+}
+
+.products-button {
+  justify-self: left;
 }
 
 .products-item h3 {
@@ -135,12 +212,33 @@ img {
   line-height: 30px;
   font-weight: 700;
   text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 16px;
+}
+
+.products-item p {
+  width: 260px;
+  margin: 0;
+  margin-bottom: 32px;
 }
 
 /* About */
 
 .about {
+  min-height: 488px;
+  display: grid;
+  grid-template-columns: 650px 360px;
+  grid-gap: 150px;
   border-bottom: 2px solid var(--basic-gray-extra-light);
+  margin-bottom: 46px;
+
+  outline: 5px solid rgba(0, 255, 255 , 0.3);
+  outline-offset: -5px;
+}
+
+.about-text {
+  outline: 5px solid rgba(255, 0, 0, 0.3);
+  outline-offset: -5px;
 }
 
 .about-intro {
@@ -167,6 +265,11 @@ img {
   margin-inline-end: 1ch;
 }
 
+.about-statistics {
+  outline: 5px solid rgba(0, 128, 255, 0.3);
+  outline-offset: -5px;
+}
+
 .about-table-header {
   color: var(--basic-black);
   font-size: 45px;
@@ -174,15 +277,53 @@ img {
   font-weight: 700;
 }
 
+.about-table {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+}
+
 .about-table-header span {
   font-size: 26px;
   vertical-align: top;
+}
+
+.about-table-text {
+  margin: 0;
 }
 
 /* Partners */
 
 .partners {
   border-bottom: 2px solid var(--basic-gray-extra-light);
+  padding-bottom: 44px;
+}
+
+.partners-list {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.partners-item {
+  justify-self: center;
+}
+
+.partners-item img {
+  opacity: 0.2;
+  transition: 0.5s;
+}
+
+.partners-item img:hover,
+.partners-item img:focus {
+  opacity: 1;
+}
+
+.partners-item img:active {
+  opacity: 0.1;
 }
 
 /* Contacts */
@@ -372,11 +513,13 @@ img {
 /* Footer */
 
 .footer-social {
+  display: grid;
+  grid-template-columns: 260px 1fr;
   line-height: 22px;
   text-align: center;
 }
 
-.footer-social ul {
+.footer-social ul {;
   list-style: none;
 }
 
